new tests and common approach
